mule-user-guide/v/3.5/database-connector-examples.adoc
数据库连接器示例= 

本文档提供了使用数据库连接器的应用程序的示例。有关连接器的完整文档，请访问 link:/mule-user-guide/v/3.6/database-connector[数据库连接器]文档和 link:/mule-user-guide/v/3.6/database-connector-reference[数据库连接器参考]。

== 假设

本文档介绍数据库连接器的两个使用示例。本文假定您熟悉 link:/mule-user-guide/v/3.6/database-connector[数据库接口]以及 link:/mule-user-guide/v/3.6/datasense[DataSense];要理解第二个例子，读者还应该熟悉 link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[DataMapper转换器]和Mule link:/mule-user-guide/v/3.6/batch-processing[批量处理]。

示例中使用的== 数据库

这个页面中的例子是为MySQL编写的。他们使用两个表的一个数据库。本示例创建数据库，数据库用户和表，并使用102行数据填充它们。

下表列出了这些示例使用的数据库的参数。

*  *Database*：`company`
*  **Database user:** `generatedata@localhost`
*  **Database user password:** `generatedata`
*  **MySQL listening port:** 3306（MySQL默认）
*  **Database tables:** `employees`和`roles`

=== 表

表`employees`。主键：`no`（员工编号）。

[%header,cols="2*"]
|===
| {列{1}}输入
| {无{1}}整数
| {DOB {1}}日期
|如first_name  |的Varchar
| {last_name的{1}}的Varchar
|性别 |枚举（F，M）
| {HIRE_DATE {1}}日期
|===

表`roles`。主键：`id`（角色ID）。

[%header%autowidth.spread]
|===
| {列{1}}输入
| ID为 |整数
| {EMP_NO {1}}整数
| {角色{1}}的Varchar
|===

== 创建数据库，用户和表

此示例执行以下操作：

* 创建名为`company`的数据库
* 用密码`generatedata`创建用户`generatedata@localhost`
* 将数据库`company`的所有权限授予用户`generatedata@localhost`
* 在数据库`company`上创建表`employees`
* 在同一个数据库上创建表`roles`
* 使用示例数据填充两个表

 查看用于复制粘贴的脚本。

[source, code, linenums]
----
CREATE DATABASE company;
 
CREATE USER 'generatedata'@'localhost' IDENTIFIED BY 'generatedata';
 
GRANT ALL PRIVILEGES ON company.* TO generatedata@localhost IDENTIFIED BY 'generatedata';
 
FLUSH PRIVILEGES;
 
USE company;
 
CREATE TABLE employees (
no INT NOT NULL,
dob DATE NOT NULL,
first_name VARCHAR(14) NOT NULL,
last_name VARCHAR(16) NOT NULL,
gender ENUM ('M','F') NOT NULL,
hire_date DATE NOT NULL,
PRIMARY KEY (no)
);
 
CREATE TABLE roles (
id mediumint(8) unsigned NOT NULL auto_increment,
emp_no mediumint,
role varchar(255) default NULL,
PRIMARY KEY (id)
) AUTO_INCREMENT=1;
 
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1011,'1985-09-02','Chava','Puckett','F','2008-10-12');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1012,'1971-12-03','Christopher','Tillman','M','2006-11-01');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1013,'1975-07-31','Judith','David','F','10-11-20');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1014,'1957-08-03','Neil','Ford','F','08-09-04');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1015,'1977-01-09','Daryl','Wolfe','M','07-09-14');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1016,'1986-03-08','Maryam','Burt','M','09-09-16');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1017,'1980-08-21','Marny','Alvarez','M','11-01-27');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1018,'1965-04-06','Wanda','Fowler','M','08-02-09');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1019,'1950-02-14','Lillian','Hancock','F','05-11-22');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1020,'1965-11-17','Tatyana','Lucas','M','09-02-16');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1021,'1973-03-13','Rooney','Sears','M','05-09-07');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1022,'1974-11-23','Ezekiel','Harding','M','10-07-02');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1023,'1961-01-26','Willa','Swanson','F','12-10-24');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1024,'1948-01-24','Eden','Mcclure','F','09-02-13');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1025,'1951-10-31','Maris','Serrano','F','11-10-04');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1026,'1972-11-11','Kyle','Jordan','M','12-10-22');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1027,'1953-10-06','Jolie','Burton','M','06-06-11');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1028,'1970-11-22','Alyssa','Black','M','11-11-10');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1029,'1952-05-23','Rahim','Noel','F','10-08-13');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1030,'1979-03-07','Roth','May','M','12-06-04');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1031,'1961-08-07','Mira','Harding','M','08-02-04');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1032,'1957-04-07','Helen','Pacheco','F','07-11-17');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1033,'1960-08-11','Evangeline','Mullen','M','13-01-25');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1034,'1971-08-07','Isadora','Walsh','F','09-07-02');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1035,'1979-02-25','Sybil','Mccarty','F','10-06-15');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1036,'1989-08-23','Emma','Cardenas','M','10-01-16');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1037,'1965-03-18','Seth','Monroe','M','06-10-16');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1038,'1954-03-21','Herrod','Noel','M','10-07-07');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1039,'1963-09-06','Devin','Howard','M','11-12-18');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1040,'1989-05-25','Kaden','Ellis','F','10-12-07');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1041,'1966-02-21','Emery','Walters','M','07-05-07');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1042,'1957-11-15','Tyrone','Gill','F','12-07-24');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1043,'1957-06-20','Uriah','Morse','M','12-04-22');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1044,'1976-11-15','Ross','Bradford','M','08-11-14');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1045,'1964-05-04','Elton','Wilkins','F','10-12-21');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1046,'1948-06-07','Lillith','Estes','M','08-04-12');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1047,'1960-04-04','Hayfa','Burch','F','06-09-25');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1048,'1966-02-26','Erin','Lane','M','05-03-01');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1049,'1985-08-23','Ella','Robinson','F','06-03-11');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1050,'1967-04-19','Wayne','Fischer','M','07-05-24');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1051,'1970-11-07','Channing','Mccoy','M','06-05-27');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1052,'1993-07-07','Rhonda','Kirby','M','06-05-19');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1053,'1978-06-04','Brenda','Hodge','M','06-05-09');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1054,'1959-10-27','Barbara','Dixon','M','12-12-05');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1055,'1949-04-28','Zephr','Lindsey','M','09-02-16');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1056,'1977-08-30','Joan','Campbell','M','12-10-14');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1057,'1957-04-14','Breanna','Leblanc','F','07-12-29');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1058,'1983-01-15','Hanna','Shaffer','M','11-04-12');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1059,'1966-01-15','Felicia','Burt','F','11-11-16');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1060,'1963-10-16','Nevada','Blackburn','M','07-08-10');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1061,'1961-12-26','Germane','Duncan','F','09-05-31');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1062,'1974-03-18','Vladimir','Becker','M','09-12-10');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1063,'1965-03-04','Stephen','Clarke','F','09-06-25');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1064,'1968-10-18','Jackson','Edwards','F','11-03-02');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1065,'1959-05-16','Brent','Dunn','M','08-01-26');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1066,'1971-10-21','Quentin','Puckett','F','08-09-15');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1067,'1950-09-26','Mona','Sosa','M','07-11-27');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1068,'1977-10-01','Nola','Dillard','F','06-10-17');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1069,'1956-08-04','Destiny','Maldonado','M','11-05-07');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1070,'1974-07-03','Levi','Dunn','M','11-12-13');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1071,'1987-09-15','Colleen','Mcpherson','M','05-02-05');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1072,'1952-12-11','Igor','Macias','M','11-10-11');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1073,'1984-07-04','Brooke','Hodge','F','06-06-22');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1074,'1969-08-30','Dillon','Stone','F','06-06-07');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1075,'1975-12-29','Marshall','Acevedo','M','11-12-22');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1076,'1965-03-29','Kylan','Richards','F','10-07-21');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1077,'1991-01-23','Luke','Howard','F','09-07-17');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1078,'1951-01-23','Chelsea','Chan','F','07-03-09');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1079,'1978-02-21','Linus','Hobbs','F','12-04-28');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1080,'1977-01-28','Burke','Ashley','F','08-07-09');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1081,'1990-11-23','Pearl','Dennis','M','10-10-10');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1082,'1981-04-27','Lyle','Myers','F','06-03-02');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1083,'1966-05-04','Kennan','Roman','M','07-07-20');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1084,'1947-12-28','Marcia','Bell','M','05-07-29');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1085,'1987-01-25','Aaron','Parrish','M','12-02-18');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1086,'1960-08-05','Madeline','Elliott','M','08-05-13');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1087,'1951-09-03','Zahir','Stevenson','M','12-06-23');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1088,'1973-01-31','Colette','Berger','F','12-01-22');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1089,'1987-11-09','Molly','Nieves','M','12-04-02');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1090,'1978-10-03','Nicole','Salas','M','07-11-08');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1091,'1955-05-08','Zane','Madden','M','09-07-01');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1092,'1949-03-26','Sydnee','Chen','F','09-11-11');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1093,'1969-02-24','Francesca','Patel','F','08-05-11');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1094,'1949-05-17','Clark','Glenn','F','08-09-25');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1095,'1984-12-07','William','Glover','F','09-12-28');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1096,'1967-10-30','Noble','Wiggins','F','08-04-08');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1097,'1977-10-15','Dai','Weeks','F','10-02-01');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1098,'1955-03-13','Ciara','Chavez','F','11-04-05');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1099,'1977-11-29','Francis','Singleton','M','10-12-07');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1100,'1993-03-25','TaShya','Mack','M','11-01-12');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1101,'1973-08-28','Jameson','Lopez','F','11-12-19');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1102,'1981-08-12','Dora','Hinton','F','07-05-26');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1103,'1948-11-13','Pascale','Ray','F','06-11-27');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1104,'1984-03-15','Abigail','Weiss','F','10-07-09');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1105,'1987-06-10','Fletcher','Underwood','M','13-01-15');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1106,'1947-12-24','Geoffrey','Meyers','M','08-04-15');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1107,'1989-01-09','Mara','Smith','M','05-07-18');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1108,'1963-05-07','Rhoda','Beard','M','10-12-02');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1109,'1964-01-22','Ali','Hanson','M','05-01-26');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1110,'1973-01-25','Vaughan','English','F','11-03-04');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1111,'1961-10-13','Marah','Pollard','M','07-10-28');
INSERT INTO employees (no,dob,first_name,last_name,gender,hire_date) VALUES (1112,'1975-08-18','Tatum','Adams','F','11-03-24');
 
INSERT INTO roles (emp_no,role) VALUES (1011,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1012,'Office Manager');
INSERT INTO roles (emp_no,role) VALUES (1013,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1014,'Engineer');
INSERT INTO roles (emp_no,role) VALUES (1015,'CEO');
INSERT INTO roles (emp_no,role) VALUES (1016,'Office Assistant');
INSERT INTO roles (emp_no,role) VALUES (1017,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1018,'Developer');
INSERT INTO roles (emp_no,role) VALUES (1019,'Office Manager');
INSERT INTO roles (emp_no,role) VALUES (1020,'Office Assistant');
INSERT INTO roles (emp_no,role) VALUES (1021,'Sr. Manager');
INSERT INTO roles (emp_no,role) VALUES (1022,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1023,'Manager');
INSERT INTO roles (emp_no,role) VALUES (1024,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1025,'Office Assistant');
INSERT INTO roles (emp_no,role) VALUES (1026,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1027,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1028,'CEO');
INSERT INTO roles (emp_no,role) VALUES (1029,'CEO');
INSERT INTO roles (emp_no,role) VALUES (1030,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1031,'Engineer');
INSERT INTO roles (emp_no,role) VALUES (1032,'Office Manager');
INSERT INTO roles (emp_no,role) VALUES (1033,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1034,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1035,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1036,'Engineer');
INSERT INTO roles (emp_no,role) VALUES (1037,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1038,'Office Assistant');
INSERT INTO roles (emp_no,role) VALUES (1039,'Developer');
INSERT INTO roles (emp_no,role) VALUES (1040,'CEO');
INSERT INTO roles (emp_no,role) VALUES (1041,'Office Manager');
INSERT INTO roles (emp_no,role) VALUES (1042,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1043,'Operations Manager');
INSERT INTO roles (emp_no,role) VALUES (1044,'Software Architect');
INSERT INTO roles (emp_no,role) VALUES (1045,'CEO');
INSERT INTO roles (emp_no,role) VALUES (1046,'Software Architect');
INSERT INTO roles (emp_no,role) VALUES (1047,'Manager');
INSERT INTO roles (emp_no,role) VALUES (1048,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1049,'Operations Manager');
INSERT INTO roles (emp_no,role) VALUES (1050,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1051,'Software Architect');
INSERT INTO roles (emp_no,role) VALUES (1052,'Software Architect');
INSERT INTO roles (emp_no,role) VALUES (1053,'Sr. Manager');
INSERT INTO roles (emp_no,role) VALUES (1054,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1055,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1056,'Software Architect');
INSERT INTO roles (emp_no,role) VALUES (1057,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1058,'Engineer');
INSERT INTO roles (emp_no,role) VALUES (1059,'Software Architect');
INSERT INTO roles (emp_no,role) VALUES (1060,'Operations Manager');
INSERT INTO roles (emp_no,role) VALUES (1061,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1062,'CEO');
INSERT INTO roles (emp_no,role) VALUES (1063,'Engineer');
INSERT INTO roles (emp_no,role) VALUES (1064,'CEO');
INSERT INTO roles (emp_no,role) VALUES (1065,'Sr. Manager');
INSERT INTO roles (emp_no,role) VALUES (1066,'Developer');
INSERT INTO roles (emp_no,role) VALUES (1067,'Office Assistant');
INSERT INTO roles (emp_no,role) VALUES (1068,'Office Manager');
INSERT INTO roles (emp_no,role) VALUES (1069,'Office Manager');
INSERT INTO roles (emp_no,role) VALUES (1070,'Office Manager');
INSERT INTO roles (emp_no,role) VALUES (1071,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1072,'Sr. Manager');
INSERT INTO roles (emp_no,role) VALUES (1073,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1074,'Office Assistant');
INSERT INTO roles (emp_no,role) VALUES (1075,'Engineer');
INSERT INTO roles (emp_no,role) VALUES (1076,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1077,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1078,'Sr. Manager');
INSERT INTO roles (emp_no,role) VALUES (1079,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1080,'Developer');
INSERT INTO roles (emp_no,role) VALUES (1081,'Operations Manager');
INSERT INTO roles (emp_no,role) VALUES (1082,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1083,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1084,'Office Manager');
INSERT INTO roles (emp_no,role) VALUES (1085,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1086,'Engineer');
INSERT INTO roles (emp_no,role) VALUES (1087,'Operations Manager');
INSERT INTO roles (emp_no,role) VALUES (1088,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1089,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1090,'Office Assistant');
INSERT INTO roles (emp_no,role) VALUES (1091,'Developer');
INSERT INTO roles (emp_no,role) VALUES (1092,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1093,'CEO');
INSERT INTO roles (emp_no,role) VALUES (1094,'Office Assistant');
INSERT INTO roles (emp_no,role) VALUES (1095,'Sr. Developer');
INSERT INTO roles (emp_no,role) VALUES (1096,'Operations Manager');
INSERT INTO roles (emp_no,role) VALUES (1097,'Developer');
INSERT INTO roles (emp_no,role) VALUES (1098,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1099,'Engineer');
INSERT INTO roles (emp_no,role) VALUES (1100,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1101,'Developer');
INSERT INTO roles (emp_no,role) VALUES (1102,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1103,'Operations Manager');
INSERT INTO roles (emp_no,role) VALUES (1104,'Office Assistant');
INSERT INTO roles (emp_no,role) VALUES (1105,'Intern');
INSERT INTO roles (emp_no,role) VALUES (1106,'Developer');
INSERT INTO roles (emp_no,role) VALUES (1107,'Secretary');
INSERT INTO roles (emp_no,role) VALUES (1108,'Sr. Manager');
INSERT INTO roles (emp_no,role) VALUES (1109,'Operations Manager');
INSERT INTO roles (emp_no,role) VALUES (1110,'Software Architect');
----

 在MySQL服务器上运行脚本

. 将MySQL脚本保存到硬盘驱动器上方便的位置。

. 打开终端并运行以下命令：
+
[source, code, linenums]
----
mysql -u root -D mysql -p
----

. 系统会提示您输入MySQL root用户的密码。输入密码后，您应该看到*mysql*提示符：
+
[source, code, linenums]
----
mysql>
----

. 使用以下命令运行MySQL脚本，其中`<script>`是脚本的完整路径和文件名，例如`/home/joe/create.sample.db.sql`。
+
[source, code, linenums]
----
source <script>;
----

.  MySQL创建脚本中指定的用户，数据库和表。要验证这些表，请运行：
+
[source, code, linenums]
----
use company;
show tables;
----

.  `show tables`命令产生类似于以下内容的输出：
+
[source, code, linenums]
----
+-------------------+
| Tables_in_company |
+-------------------+
| employees         |
| roles             |
+-------------------+
2 rows in set (0.00 sec)
----

. 有关表格的信息，请运行`describe <table>`。要查看表的完整内容，请运行标准SQL语句`select * from <table>`。

. 要退出mysql，请键入`quit;`。

== 示例1

本示例简单说明了如何使用`SELECT`操作从数据库连接器中检索数据。

[NOTE]
====
为了简单起见，本示例直接从HTTP连接器访问数据库，但这不是建议的做法。本示例旨在说明简单SELECT操作的概念，但我们不建议直接将数据库功能作为API公开。
====

MySQL数据库`company`包含名为`employees`的表格，其中包含员工信息，例如姓和名，出生日期等。

image:DBtestFlow.png[DBtestFlow]

在Mule应用程序中，入站 link:/mule-user-guide/v/3.6/http-connector[HTTP连接器]以下面的形式侦听HTTP GET请求：`http://<host>:8081/?lastname=<parameter>`。 HTTP连接器将`<parameter>`的值作为其中一个消息属性传递给数据库连接器。数据库连接器配置为提取此值并将其用于下面列出的SQL查询。

[source, code, linenums]
----
select first_name from employees where last_name = #[message.inboundProperties['lastname']]
----

如您所见，SQL查询中的 link:/mule-user-guide/v/3.7/mule-expression-language-mel[MEL]表达式引用传递给HTTP连接器的参数的值。因此，如果HTTP连接器收到`http://localhost:8081/?lastname=Smith`，则SQL查询将为`select first_name from employees where last_name = Smith`。

数据库连接器指示数据库服务器运行SQL查询，检索查询的结果，并将其传递到将结果转换为JSON的对象到JSON消息处理器。由于HTTP连接器被配置为请求 - 响应，结果将返回给始发HTTP客户端。

=== 为此示例配置数据库连接器

== 示例2

在这个例子中，数据库连接器从驻留在监听端口3306的主机xubuntu上的MySQL数据库中检索数据，这是MySQL的默认值。下表列出了数据库连接器的完整配置。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
[%header%autowidth.spread]
|===
|Parameter |Value |Properties Editor Image
|*Display Name* |`Database` .5+| image:db-ex-1.png[db-ex-1]
|*Config Reference* |`MySQL_Configuration`
|*Operation* |`Select`
|*Query Type* |`Parameterized`
|*Parameterized SQL Statement* |`select first_name from employees where last_name = #[message.inboundProperties['lastname']]`
|===
....
[tab,title="Standalone XML"]
....
[source, xml, linenums]
----
<db:select config-ref="MySQL_Configuration" doc:name="Database">
   <db:parameterized-query><![CDATA[select first_name from employees where last_name = '#[message.inboundProperties['lastname']]></db:parameterized-query>
</db:select>
----
....
------

在此示例中，数据库连接器引用`MySQL_Configuration` link:/mule-user-guide/v/3.6/global-elements[全球元素]来获取连接参数。 `MySQL_Configuration`使用下面列出的参数进行配置。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
*General Tab*

image:global_db_connector_example.png[global_db_connector_example]

[%header%autowidth.spread]
|===
|Parameter |Value
|*Name* |`MySQL_Configuration`
|*Host* |Not set (defined in *URL*)
|*Port* |Not set (defined in *URL*)
|*User* |Not set (defined in *URL*)
|*Password* |Not set (defined in *URL*)
|*Database* |Not set (defined in *URL*)
|*Configure via Spring bean* |No (unchecked)
|*DataSource Reference* |None
|*URL* a|
[source, code, linenums]
----
jdbc:mysql://xubuntu:3306/ company?user=generatedata&password=
generatedata
----
|*Enable DataSense* |True (default)
|===

*Advanced Tab*

In this tab, all settings are at their default values.

image:global_db_conn_Advanced.png[global_db_conn_Advanced]

[%header%autowidth,width=80%]
|===
|Parameter |Value
|*Use XA Transactions* | 
|*Login Timeout* | 
|*Transaction isolation* |`NONE`
|*Max Pool Size:* | 
|*Min Pool Size:* | 
|*Acquire Increment:* | 
|*Prepared Statement Cache Size:* | 
|*Max Wait Millis* | 
|===
....
[tab,title="Standalone XML"]
....
[source, xml, linenums]
----
<db:mysql-config name="MySQL_Configuration" url="jdbc:mysql://xubuntu:3306/company?user=generatedata&amp;password=generatedata&amp;generateSimpleParameterMetadata=true" doc:name="MySQL Configuration"/>
----
....
------

目标数据库`company`包含表`employees`，其中的代码片段如下所示。

[source, code, linenums]
----
+--------+------------+-------------+-----------+--------+------------+
| emp_no | birth_date | first_name  | last_name | gender | hire_date  |
+--------+------------+-------------+-----------+--------+------------+
|   1010 | 1978-10-07 | Ross        | Rodgers   | M      | 2011-10-07 |
|   1011 | 1985-09-02 | Chava       | Puckett   | F      | 2008-10-12 |
|   1012 | 1971-12-03 | Christopher | Tillman   | M      | 2006-11-01 |
...
----

当HTTP连接器收到请求时，将激活流程并且数据库连接器执行以下操作：

* 登录到目标数据库

* 指示MySQL服务器运行用户定义的查询

* 检索结果，然后将其作为消息负载传递给下一个消息处理器

对象到JSON转换器将消息负载转换为JSON，如下所示。

[source, code, linenums]
----
[{"first_name":"<result>"}]
----

最后，HTTP连接器将该字符串返回给始发客户端。因此，例如，源自Web浏览器的HTTP查询会在浏览器窗口中返回结果，如下所示。

image:ex.1.v2.browser_results.png[ex.1.v2.browser_results]

上图显示查询已返回`last_name`与`Tillman`匹配的行的`first_name`列的正确值。

[TIP]
====
要在此示例中激活流程，可以使用浏览器（如上所示）或 http://curl.haxx.se/download.html[卷曲]命令行HTTP客户端，如下所示。

[source, code, linenums]
----
curl http://<host>:8081/?lastname=<parameter>
----

使用curl会将生成的JSON打印到终端的标准输出。
====

== 示例2

在本例中，数据库连接器从两个表中检索数据。 link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[DataMapper转换器]将此数据映射到CSV格式。 link:/mule-user-guide/v/3.7/file-connector[文件连接器]将生成的CSV文件写入磁盘，并且 link:/mule-user-guide/v/3.3/logger-component-reference[记录器组件]将处理详细信息记录到控制台。

这个例子使用 link:/mule-user-guide/v/3.6/batch-processing[批量处理]，这意味着在这个Mule应用程序中，消息被分成记录和异步处理。在处理大量数据时，批处理与数据库连接器上启用的*streaming*一起使用，可以避免系统过载。

image:ex.2-batchjob.flow.png[例2，batchjob.flow]

数据库连接器位于 link:/mule-user-guide/v/3.6/poll-reference[投票范围]中，每10分钟请求数据库连接器在数据库上执行其配置的操作。数据库连接器执行返回100行的数据库查询。 Mule将这些数据提供给`Batch Commit`批量作用域内的DataMapper转换器。 DataMapper将输入转换为CSV文件;然后， link:/mule-user-guide/v/3.7/file-connector[文件连接器]将生成的CSV文件写入磁盘。 link:/mule-user-guide/v/3.3/logger-component-reference[记录器组件]将处理后的记录记录到控制台。

[TIP]
====
这个例子使用与前面例子相同的MySQL数据库。如果你想在你的MySQL服务器上重新创建数据库，你可以下载或复制粘贴本页提供的MySQL脚本。有关详细信息，请参阅上面的数据库配置一节。
====

=== 为此示例配置数据库连接器

在这个例子中，数据库连接器从驻留在监听端口3306的主机xubuntu上的MySQL数据库中检索数据，这是MySQL的默认值。下表列出了数据库连接器的完整配置。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
[%header%autowidth.spread]
|===
|Parameter |Value |Properties Editor Image
|*Display Name* |`Database` .5+| image:example_2_db_gentab.png[example_2_db_gentab]
|*Config Reference* |`MySQL_Configuration`
|*Operation* |`Select`
|*Query Type* |`Parameterized`
|*Parameterized SQL Statement* |`SELECT no, first_name, last_name, role FROM employees INNER JOIN roles ON employees.no = roles.emp_no;`
|===
....
[tab,title="Standalone XML"]
....
[source, xml, linenums]
----
<db:mysql-config name="MySQL_Config"     doc:name="MySQL Config" url="jdbc:mysql://xubuntu:3306/company?user=generatedata&amp;password=generatedata&amp;generateSimpleParameterMetadata=true"/>
----
....
------

在此示例中，数据库连接器引用`MySQL_Configuration`来获取连接参数。 `MySQL_Configuration`是使用下面列出的参数创建的。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
*General Tab*

image:global_db_connector_example.png[global_db_connector_example]

[%header,cols="2*"]
|===
|Parameter |Value
|*Name* |`MySQL_Configuration`
|*Host* |Not set (defined in *URL*)
|*Port* |Not set (defined in *URL*)
|*User* |Not set (defined in *URL*)
|*Password* |Not set (defined in *URL*)
|*Database* |Not set (defined in *URL*)
|*Configure via Spring bean* |No (unchecked)
|*DataSource Reference* |None
|*URL* a|
[source, code, linenums]
----
jdbc:mysql://xubuntu:3306/company?user=generatedata&password=generatedata&generateSimpleParameterMetadata=true
----
|*Enable DataSense* |True (default)
|===

*Advanced Tab*

In this tab, all settings are at their default values.

image:global_db_conn_Advanced.png[global_db_conn_Advanced]

[%header%autowidth,width=80%]
|===
|Parameter |Value
|*Use XA Transactions* | 
|*Login Timeout* | 
|*Transaction isolation* |`NONE`
|*Max Pool Size:* | 
|*Min Pool Size:* | 
|*Acquire Increment:* | 
|*Prepared Statement Cache Size:* | 
|*Max Wait Millis* | 
|===
....
[tab,title="Standalone XML"]
....
[source, xml, linenums]
----
<db:mysql-config name="MySQL_Configuration" url="jdbc:mysql://xubuntu:3306/company?user=generatedata&amp;password=generatedata&amp;generateSimpleParameterMetadata=true" doc:name="MySQL Configuration"/>
----
....
------

=== 数据库查询和结果

名为"company,"的目标数据库包含两个表，"employees"和"roles."下面显示了每个表的一个片段。

。表格"employees"
[source, code, linenums]
----
+--------+------------+-------------+-----------+--------+------------+
| emp_no | birth_date | first_name  | last_name | gender | hire_date  |
+--------+------------+-------------+-----------+--------+------------+
|   1010 | 1978-10-07 | Ross        | Rodgers   | M      | 2011-10-07 |
|   1011 | 1985-09-02 | Chava       | Puckett   | F      | 2008-10-12 |
|   1012 | 1971-12-03 | Christopher | Tillman   | M      | 2006-11-01 |
...
----

。表格"roles"
[source, code, linenums]
----
+-----+--------+--------------------+
| id  | emp_no | role               |
+-----+--------+--------------------+
|   1 |   1011 | Sr. Developer      |
|   2 |   1012 | Office Manager     |
|   3 |   1013 | Secretary          |
...
----

数据库连接器已配置为执行下面显示的SQL查询。

[source, code, linenums]
----
SELECT no, first_name, last_name, role FROM employees INNER JOIN roles ON employees.no = roles.emp_no;
----

该查询产生100行结果，其中包含来自两个表的数据。前三行如下所示。

[source, code, linenums]
----
+------+-------------+-----------+--------------------+
| no   | first_name  | last_name | role               |
+------+-------------+-----------+--------------------+
| 1011 | Chava       | Puckett   | Sr. Developer      |
| 1012 | Christopher | Tillman   | Office Manager     |
| 1013 | Judith      | David     | Secretary          |
...
----

这个结果数据将由DataMapper转换器转换为CSV。下一节介绍如何配置DataMapper转换器，同时避免手动映射输入/输出字段。

=== 使用DataSense配置DataMapper

为了配置DataMapper将从数据库查询接收到的数据映射到CSV文件，您可以利用DataSense，它可以避免手动配置输入和输出字段。为此，您必须配置数据库连接器_before_配置DataMapper转换器。这样，DataMapper转换器将能够告诉数据库连接器从数据库中检索输入字段，然后根据这些输入字段自动创建映射。

要在此示例中创建批处理作业，请执行以下步骤：

. 将批量作用域从Palette拖到画布上。

. 将数据库连接器拖到批处理作用域的*Input*部分。

. 根据需要配置数据库连接器以从数据库检索所需的数据。这需要所有连接参数以及操作等。测试连接以查看它的工作原理。当您离开数据库连接器配置时（即，当您单击Studio窗口的数据库连接器外部的任何位置时），数据库连接器将使用DataSense自动检索元数据。

. 将批量提交范围拖到批量作用域的*Process Records*部分。

. 将DataMapper转换器拖放到批量提交作用域中。

. 将文件连接器拖到批量提交作用域中。

. 最后，在批量作用域的*On Complete*部分中拖动一个记录器组件。

此时，您已经构建了批处理作业并准备好配置DataMapper转换器。双击DataMapper转换器打开其配置编辑器，该编辑器应该与下图类似。

image:ex2.datamapper.raw.png[ex2.datamapper.raw]

要指示DataMapper从数据库连接器获取元数据，请首先单击*Change Type*。 DataMapper编辑器将更改为允许您选择从哪个连接器接收数据，如下图所示。

image:ex2.datamapper.conn.select.png[ex2.datamapper.conn.select]

点击*Connector*旁边的下拉菜单，然后选择`MySQL_Configuration`。这是数据库连接器引用的全局元素，它包含连接到MySQL数据库的参数。

image:ex2.datamapper.conn.select2.png[ex2.datamapper.conn.select2]

当您选择`MySQL_Configuration`时，DataMapper将从数据库连接器中检索输入元数据。此操作需要几秒钟。操作完成后，点击*Operation*旁边的下拉菜单，然后选择`select`。然后，点击*Object*旁边的下拉菜单，然后选择`List<Map>`。

image:ex2.datamapper.all.selected.ops.png[ex2.datamapper.all.selected.ops]

在输出映射窗格中，点击*Type*旁边的下拉菜单，然后选择`CSV`。接下来，点击*User Defined*旁边的复选框。

此时，DataMapper视图应如下图所示。

image:ex2.datamapper.CSV.selected.png[ex2.datamapper.CSV.selected]

在输出映射窗格中，点击*Generate default*，然后点击*Edit Fields*。 DataMapper显示*Define the CSV*编辑器，它应该看起来像下面的图片。

image:ex2.Define.the.CSV.png[ex2.Define.the.CSV]

如您所见，DataMapper使用DataSense从数据库中收集相关的元数据，即列名和数据类型，并将它们作为输入字段。此时，您可以根据需要修改，添加或删除字段。对于这个例子，我们可以将字段保持原样。

点击**OK **关闭*Define the CSV*窗口，然后点击DataMapper视图底部的**Create mapping **。 DataMapper自动将输入字段映射到相应的输出CSV字段。

下图显示了完成的DataMapper变压器配置。

image:ex2.finished.datamapper.png[ex2.finished.datamapper]

如果你想测试这个Mule应用程序，你需要执行两个额外的任务：

* 配置文件连接器以将CSV文件保存到本地磁盘上的所需位置。

* 配置记录器组件在日志级别`WARN`输出以下显示的消息。
+
[source, code, linenums]
----
Total Records exported: #[message.payload.getLoadedRecords()], Failed Records: #[message.payload.getFailedRecords()], Processing time: #[message.payload.getElapsedTimeInMillis()]
----

当您运行应用程序时，DataMapper会将结果输出到文件连接器，然后将文件连接器写入本地磁盘上的文件。 （在这个例子中，输出文件是`roles.csv`，将被写入Mule应用程序的根文件夹。）

运行应用程序时，数据库连接器将自动连接到数据库并检索数据。如果您不停止应用程序，它会每十分钟重复一次该操作。输出的CSV数据将写入您在文件连接器中指定的文件。以下是生成的CSV文件的第一行。

[source, code, linenums]
----
"Chava","Puckett","1011","Sr. Developer"
"Christopher","Tillman","1012","Office Manager"
"Judith","David","1013","Secretary"
----

控制台显示记录器组件输出的消息。

[source, code, linenums]
----
INFO  2014-02-28 14:11:20,805 [pool-15-thread-1] com.mulesoft.module.batch.engine.DefaultBatchEngine: Created instance 40d3cb27-a0c5-11e3-a3c7-f1f67a172e10 for batch job db-appBatch1
INFO  2014-02-28 14:11:20,808 [pool-15-thread-1] com.mulesoft.module.batch.engine.DefaultBatchEngine: Starting input phase
INFO  2014-02-28 14:11:20,808 [pool-15-thread-1] com.mulesoft.module.batch.engine.DefaultBatchEngine: Input phase completed
INFO  2014-02-28 14:11:20,822 [pool-15-thread-1] com.mulesoft.module.batch.engine.queue.BatchQueueLoader: Starting loading phase for instance 40d3cb27-a0c5-11e3-a3c7-f1f67a172e10 of job db-appBatch1
INFO  2014-02-28 14:11:20,847 [pool-15-thread-1] com.mulesoft.module.batch.engine.queue.BatchQueueLoader: Finished loading phase for instance 40d3cb27-a0c5-11e3-a3c7-f1f67a172e10 of job db-appBatch1. 100 records were loaded
INFO  2014-02-28 14:11:20,851 [pool-15-thread-1] com.mulesoft.module.batch.engine.DefaultBatchEngine: Started execution of instance 40d3cb27-a0c5-11e3-a3c7-f1f67a172e10 of job db-appBatch1
INFO  2014-02-28 14:11:22,007 [batch-job-db-appBatch1-work-manager.01] com.mulesoft.module.batch.DefaultBatchStep: Step Batch_Step finished processing all records for instance 40d3cb27-a0c5-11e3-a3c7-f1f67a172e10 of job db-appBatch1
INFO  2014-02-28 14:11:28,584 [batch-job-db-appBatch1-work-manager.01] org.mule.lifecycle.AbstractLifecycleManager: Initialising: 'connector.file.mule.default.dispatcher.763473616'. Object is: FileMessageDispatcher
INFO  2014-02-28 14:11:28,586 [batch-job-db-appBatch1-work-manager.01] org.mule.lifecycle.AbstractLifecycleManager: Starting: 'connector.file.mule.default.dispatcher.763473616'. Object is: FileMessageDispatcher
INFO  2014-02-28 14:11:28,592 [batch-job-db-appBatch1-work-manager.01] org.mule.transport.file.FileConnector: Writing file to: /Users/pedro/mule.installations/Dolomites-17feb14/workspace/test2/roles.csv
INFO  2014-02-28 14:11:28,691 [[test2].Batch Dispatcher thread] com.mulesoft.module.batch.engine.DefaultBatchEngine: Finished execution for instance 40d3cb27-a0c5-11e3-a3c7-f1f67a172e10 of job db-appBatch1
INFO  2014-02-28 14:11:28,692 [[test2].Batch Dispatcher thread] com.mulesoft.module.batch.engine.DefaultBatchEngine: Starting execution of onComplete phase for instance 40d3cb27-a0c5-11e3-a3c7-f1f67a172e10 of job db-appBatch1
WARN  2014-02-28 14:11:28,702 [[test2].Batch Dispatcher thread] org.mule.api.processor.LoggerMessageProcessor: Total Records exported: 100, Failed Records: 0, Processing time: 7844
INFO  2014-02-28 14:11:28,703 [[test2].Batch Dispatcher thread] com.mulesoft.module.batch.engine.DefaultBatchEngine: Finished execution of onComplete phase for instance 40d3cb27-a0c5-11e3-a3c7-f1f67a172e10 of job db-appBatch1
----

== 另请参阅

* 详细了解 link:/mule-user-guide/v/3.6/datasense[DataSense]以及如何使用它来检索远程应用程序的元数据。

* 深入研究 link:/mule-user-guide/v/3.6/batch-processing[批量处理]，以深入了解Mule如何处理批量作业中的消息。
